<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <TextView
            android:id="@+id/tv_natija"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_margin="2dp"
            android:background="@color/purple_500"
            android:gravity="bottom|end"
            android:padding="5dp"
            android:text="@string/app0"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:autofillHints="name"
            android:labelFor="@id/et_displey"
            android:inputType="number"
            android:id="@+id/et_displey"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_margin="2dp"
            android:background="@drawable/et_back"
            android:enabled="false"
            android:gravity="end|center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/app0"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_AC"
                style="@style/normal_button"
                android:text="@string/appAC" />

            <Button
                android:id="@+id/b_minuspilus"
                style="@style/normal_button"
                android:text="@string/apppilusminus" />

            <Button
                android:id="@+id/b_qoldiq"
                style="@style/normal_button"
                android:text="@string/appfoiz" />

            <Button
                android:id="@+id/b_bolish"
                style="@style/normal_button"
                android:text="@string/app33" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/b_7"
                android:text="@string/app7"
                style="@style/normal_button" />
            <Button
                android:id="@+id/b_8"
                style="@style/normal_button"
                android:text="@string/app8"/>
            <Button
                android:id="@+id/b_9"
                style="@style/normal_button"
                android:text="@string/app9"/>
            <Button
                android:id="@+id/b_kopaytirish"
                style="@style/normal_button"
                android:text="@string/app22"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/b_4"
                android:text="@string/app4"
                style="@style/normal_button" />
            <Button
                android:id="@+id/b_5"
                style="@style/normal_button"
                android:text="@string/app5"/>
            <Button
                android:id="@+id/b_6"
                style="@style/normal_button"
                android:text="@string/app6"/>
            <Button
                android:id="@+id/b_ayirish"
                style="@style/normal_button"
                android:text="@string/app11"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/b_1"
                android:text="@string/app1"
                style="@style/normal_button" />
            <Button
                android:id="@+id/b_2"
                style="@style/normal_button"
                android:text="@string/app2"/>
            <Button
                android:id="@+id/b_3"
                style="@style/normal_button"
                android:text="@string/app3"/>
            <Button
                android:id="@+id/b_qoshish"
                style="@style/normal_button"
                android:text="@string/app00"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/b_0"
                android:layout_weight="0.67"
                style="@style/normal_button"
                android:text="@string/app0"/>
            <Button
                android:id="@+id/b_butun"
                android:layout_weight="1"
                style="@style/normal_button"
                android:text="@string/appvergul"/>
            <Button
                android:id="@+id/b_barobar"
                android:layout_weight="1"
                style="@style/normal_button"
                android:text="@string/TODO"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>